fixed layout issues for cookies menu

--- a/sass/plugins/woocommerce/_products.scss
+++ b/sass/plugins/woocommerce/_products.scss
@@ -11,6 +11,7 @@ ul.products {
     max-width: calc(100%);
     text-align: center;
     text-decoration: none;
+    justify-content: center;
     a {
       text-decoration: none;
     }
