--- a/sass/plugins/woocommerce/_single-product.scss
+++ b/sass/plugins/woocommerce/_single-product.scss
@@ -2,7 +2,7 @@
   color: $brand_dark;
 }
 
-.product-type-simple {
+div.product-type-simple {
   margin: $spacing__margin;
   display: flex;
   flex-direction: row-reverse;
